2005-01-20  Carl Worth  <cworth@cworth.org>

	* cairo-perl.h: Track split-up of cairo.h.

2004/11/28 13:20 (-0500) rwmcfa1

	* Makefile.PL, MakeHelper.pm: initial import of MakeHelper, mess of
	code moved out of Makefile.PL into it. beginning of cleaning all that 
	up. File::Spec now used.

	* examples/png/*: initial import of port of cairo-demo/png examples,
	except text.

	* META.yml: unknown version

	* MANIFEST, MANIFEST.SKIP: updates

2004/11/11 22:10 (-0500) rwmcfa1

	* t/CairoMatrix.t, t/CairoPattern.t, t/CairoSurface.t: initial import,
	95% complete tests

	* Cairo.xs, CairoMatrix.xs, CairoSurface.xs, CairoPattern.xs: no more
	new's, not really a good idea.
	
	* CairoFont.xs: all disabled for now

	* CairoMatrix.xs: copy, multiply, and transforms fixed while doing
	tests

	* CairoPattern.xs: get_matrix fixed whlie doing tests

	* CairoSurface.xs: cleaned up the namespace problems herein. fixed
	several output funcs.

	* MANIFEST: added TODO and new tests.

	* MANIFEST.SKIP: skip CairoEnums.xs

	* t/Cairo.t: no new test, change Surface stuff due to namespace above

2004/11/10 21:08 (-0500) rwmcfa1

	* TODO: initial import

	* Cairo.pm, Cairo.xs: added %backends facility

	* Cario.xs, CairoSurface.xs: stuff moved out of Cairo.xs that belonged
	here

	* Cairo.xs: fixed some OUTLIST stuff (IN_OUTLIST.) cairo_current_matrix
	fixed. 

	* CairoPattern.xs: added class param to create_for_surface

	* Makefile.PL: seperated structs out of objects. add refs to object
	typemaps OUTPUT sections. don't return full strings for OUTPUT enum
	types.

	* cairo-perl.h: don't need stdio.h

	* t/Cairo.t: test most all of cairo type. 90% done.

2004/11/08 20:44 (-0500) rwmcfa1

	* Cairo.xs, CairoMatrix.xs, CairoPattern.xs, CairoSurface.xs: all of 
	the create functions have been cleaned up/fixed. debug prints removed.
	create's alised to new's where appropriate.

	* MANIFEST, MANIFEST.SKIP: ChangeLog added. build and CVS skipped
